--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Install `wasm-pack` by downloading the executable (much faster tha
 author: 'jetli'
 inputs:
   version:
-    description: 'Optional version of wasm-pack to install (eg. "0.9.1", "latest")'
+    description: 'Optional version of wasm-pack to install (eg. "v0.9.1", "latest")'
     default: 'latest'
 runs:
   using: 'node12'
