Run wasm-pack --version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,5 @@ jobs:
     - uses: ./
       with: 
         version: v0.9.1
-    - run: wasm-pack --version
+    - run: |
+        wasm-pack --version
